# API-workshop

./: .gitignore  README.md  main.py  pyproject.toml  testes.py
.github/workflows/: main.yml
