[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = ["Wenderson <wenderson_fagundes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
taskipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]

run = "uvicorn app.main:app --reload"
test = "pytest -v"
kill = "kill -9 $(lsof -t -i:8000)"