[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = ["Wenderson <wenderson_fagundes@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
taskipy = "^1.13.0"
pytest = "^8.2.2"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]

run = "uvicorn main:app --reload"
test = "poetry run pytest -v testes.py"
kill = "kill -9 $(lsof -t -i:8000)"